Fixing APPFAC-3325 - "App Icons are looking bit stretched"

--- a/modules/jaggery-apps/appmgt/src/site/themes/default/css/styles.css
+++ b/modules/jaggery-apps/appmgt/src/site/themes/default/css/styles.css
@@ -681,13 +681,38 @@ a.btn-action {
     padding-left: 4px;
 }
 .app-icon {
-    z-index: 99;
-    z-index: 99;
+    border: none;
+    margin: 0;
+    background: #2c313b;
+    color: #fff;
+    text-align: center;
+    position: relative;
+}
+.app-icon:before {
+    display: block;
+    content: "";
+    width: 100%;
+    padding-top: 100%;
+}
+.app-icon > .square-element {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
 }
 .app-icon img {
     width: 100%;
-    max-height: 273px;
-    min-height: 273px;
+}
+.app-icon .square-element:before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
 }
 .app-name {
     position: absolute;
